Package_Tools/include-C/gst/123_in_arbeit/base/gstbytereader.h

#define __GST_BYTE_READER_H__
#define GST_BYTE_READER(reader) ((GstByteReader *) (reader))
/**
 * GstByteReader:
 * @data: (array length=size): Data from which the bit reader will
 *   read
 * @size: Size of @data in bytes
 * @byte: Current byte position
 *
 * A byte reader instance.
 */
typedef struct {
  const guint8 *data;
  guint size;

  guint byte;  /* Byte position */

  /* < private > */
  gpointer _gst_reserved[GST_PADDING];
} GstByteReader;
extern
void            gst_byte_reader_init            (GstByteReader *reader, const guint8 *data, guint size);
extern
guint           gst_byte_reader_get_pos         (const GstByteReader *reader);
extern
guint           gst_byte_reader_get_remaining   (const GstByteReader *reader);
extern
guint           gst_byte_reader_get_size        (const GstByteReader *reader);
extern
gboolean        gst_byte_reader_skip            (GstByteReader *reader, guint nbytes);
extern
gboolean        gst_byte_reader_get_uint8       (GstByteReader *reader, guint8 *val);
extern
gboolean        gst_byte_reader_get_int8        (GstByteReader *reader, gint8 *val);
extern
gboolean        gst_byte_reader_get_uint16_le   (GstByteReader *reader, guint16 *val);
extern
gboolean        gst_byte_reader_get_int16_le    (GstByteReader *reader, gint16 *val);
extern
gboolean        gst_byte_reader_get_uint16_be   (GstByteReader *reader, guint16 *val);
extern
gboolean        gst_byte_reader_get_int16_be    (GstByteReader *reader, gint16 *val);
extern
gboolean        gst_byte_reader_get_uint24_le   (GstByteReader *reader, guint32 *val);
extern
gboolean        gst_byte_reader_get_int24_le    (GstByteReader *reader, gint32 *val);
extern
gboolean        gst_byte_reader_get_uint24_be   (GstByteReader *reader, guint32 *val);
extern
gboolean        gst_byte_reader_get_int24_be    (GstByteReader *reader, gint32 *val);
extern
gboolean        gst_byte_reader_get_uint32_le   (GstByteReader *reader, guint32 *val);
extern
gboolean        gst_byte_reader_get_int32_le    (GstByteReader *reader, gint32 *val);
extern
gboolean        gst_byte_reader_get_uint32_be   (GstByteReader *reader, guint32 *val);
extern
gboolean        gst_byte_reader_get_int32_be    (GstByteReader *reader, gint32 *val);
extern
gboolean        gst_byte_reader_get_uint64_le   (GstByteReader *reader, guint64 *val);
extern
gboolean        gst_byte_reader_get_int64_le    (GstByteReader *reader, gint64 *val);
extern
gboolean        gst_byte_reader_get_uint64_be   (GstByteReader *reader, guint64 *val);
extern
gboolean        gst_byte_reader_get_float64_le  (GstByteReader *reader, gdouble *val);
extern
gboolean        gst_byte_reader_get_float64_be  (GstByteReader *reader, gdouble *val);
extern
gboolean        gst_byte_reader_peek_float32_le (const GstByteReader *reader, gfloat *val);
extern
gboolean        gst_byte_reader_peek_float32_be (const GstByteReader *reader, gfloat *val);
extern
gboolean        gst_byte_reader_peek_float64_le (const GstByteReader *reader, gdouble *val);
extern
gboolean        gst_byte_reader_peek_float64_be (const GstByteReader *reader, gdouble *val);
extern
gboolean        gst_byte_reader_dup_data        (GstByteReader * reader, guint size, guint8       ** val);
extern
gboolean        gst_byte_reader_get_data        (GstByteReader * reader, guint size, const guint8 ** val);
extern
gboolean        gst_byte_reader_peek_data       (const GstByteReader * reader, guint size, const guint8 ** val);
#define gst_byte_reader_dup_string(reader,str) \
    gst_byte_reader_dup_string_utf8(reader,str)
extern
gboolean        gst_byte_reader_dup_string_utf8  (GstByteReader * reader, gchar   ** str);
#define gst_byte_reader_skip_string(reader) \
    gst_byte_reader_skip_string_utf8(reader)
extern
gboolean        gst_byte_reader_skip_string_utf8  (GstByteReader * reader);
#define gst_byte_reader_get_string(reader,str) \
    gst_byte_reader_get_string_utf8(reader,str)
#define gst_byte_reader_peek_string(reader,str) \
    gst_byte_reader_peek_string_utf8(reader,str)
extern
gboolean        gst_byte_reader_get_string_utf8    (GstByteReader * reader, const gchar ** str);
extern
gboolean        gst_byte_reader_peek_string_utf8   (const GstByteReader * reader, const gchar ** str);
#define gst_byte_reader_init(reader,data,size) \
    _gst_byte_reader_init_inline(reader,data,size)
#define gst_byte_reader_get_remaining(reader) \
    _gst_byte_reader_get_remaining_inline(reader)
#define gst_byte_reader_get_size(reader) \
    _gst_byte_reader_get_size_inline(reader)
#define gst_byte_reader_get_pos(reader) \
    _gst_byte_reader_get_pos_inline(reader)
/* we use defines here so we can add the G_LIKELY() */
#define gst_byte_reader_get_uint8(reader,val) \
    G_LIKELY(_gst_byte_reader_get_uint8_inline(reader,val))
#define gst_byte_reader_get_int8(reader,val) \
    G_LIKELY(_gst_byte_reader_get_int8_inline(reader,val))
#define gst_byte_reader_get_uint16_le(reader,val) \
    G_LIKELY(_gst_byte_reader_get_uint16_le_inline(reader,val))
#define gst_byte_reader_get_int16_le(reader,val) \
    G_LIKELY(_gst_byte_reader_get_int16_le_inline(reader,val))
#define gst_byte_reader_get_uint16_be(reader,val) \
    G_LIKELY(_gst_byte_reader_get_uint16_be_inline(reader,val))
#define gst_byte_reader_get_int16_be(reader,val) \
    G_LIKELY(_gst_byte_reader_get_int16_be_inline(reader,val))
#define gst_byte_reader_get_uint24_le(reader,val) \
    G_LIKELY(_gst_byte_reader_get_uint24_le_inline(reader,val))
#define gst_byte_reader_get_int24_le(reader,val) \
    G_LIKELY(_gst_byte_reader_get_int24_le_inline(reader,val))
#define gst_byte_reader_get_uint24_be(reader,val) \
    G_LIKELY(_gst_byte_reader_get_uint24_be_inline(reader,val))
#define gst_byte_reader_get_int24_be(reader,val) \
    G_LIKELY(_gst_byte_reader_get_int24_be_inline(reader,val))
#define gst_byte_reader_get_uint32_le(reader,val) \
    G_LIKELY(_gst_byte_reader_get_uint32_le_inline(reader,val))
#define gst_byte_reader_get_int32_le(reader,val) \
    G_LIKELY(_gst_byte_reader_get_int32_le_inline(reader,val))
#define gst_byte_reader_get_uint32_be(reader,val) \
    G_LIKELY(_gst_byte_reader_get_uint32_be_inline(reader,val))
#define gst_byte_reader_get_int32_be(reader,val) \
    G_LIKELY(_gst_byte_reader_get_int32_be_inline(reader,val))
#define gst_byte_reader_get_uint64_le(reader,val) \
    G_LIKELY(_gst_byte_reader_get_uint64_le_inline(reader,val))
#define gst_byte_reader_get_int64_le(reader,val) \
    G_LIKELY(_gst_byte_reader_get_int64_le_inline(reader,val))
#define gst_byte_reader_get_uint64_be(reader,val) \
    G_LIKELY(_gst_byte_reader_get_uint64_be_inline(reader,val))
#define gst_byte_reader_get_float64_le(reader,val) \
    G_LIKELY(_gst_byte_reader_get_float64_le_inline(reader,val))
#define gst_byte_reader_get_float64_be(reader,val) \
    G_LIKELY(_gst_byte_reader_get_float64_be_inline(reader,val))
#define gst_byte_reader_peek_float32_le(reader,val) \
    G_LIKELY(_gst_byte_reader_peek_float32_le_inline(reader,val))
#define gst_byte_reader_peek_float32_be(reader,val) \
    G_LIKELY(_gst_byte_reader_peek_float32_be_inline(reader,val))
#define gst_byte_reader_peek_float64_le(reader,val) \
    G_LIKELY(_gst_byte_reader_peek_float64_le_inline(reader,val))
#define gst_byte_reader_peek_float64_be(reader,val) \
    G_LIKELY(_gst_byte_reader_peek_float64_be_inline(reader,val))
#define gst_byte_reader_dup_data(reader,size,val) \
    G_LIKELY(_gst_byte_reader_dup_data_inline(reader,size,val))
#define gst_byte_reader_get_data(reader,size,val) \
    G_LIKELY(_gst_byte_reader_get_data_inline(reader,size,val))
#define gst_byte_reader_peek_data(reader,size,val) \
    G_LIKELY(_gst_byte_reader_peek_data_inline(reader,size,val))
#define gst_byte_reader_skip(reader,nbytes) \
    G_LIKELY(_gst_byte_reader_skip_inline(reader,nbytes))