Package_Tools/include-C/gst/123_in_arbeit/base/gstbytereader.pp


{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_float64_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_float64_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_float32_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_float32_be(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_float64_le(reader,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_float64_be(reader,val : longint) : longint;

{$endif}
{ GST_BYTE_READER_DISABLE_INLINES  }
{
static inline void
_gst_byte_reader_init_inline (GstByteReader * reader, const guint8 * data, guint size)

  g_return_if_fail (reader != NULL);

  reader->data = data;
  reader->size = size;
  reader->byte = 0;


static inline gboolean
_gst_byte_reader_peek_sub_reader_inline (GstByteReader * reader,
    GstByteReader * sub_reader, guint size)

  g_return_val_if_fail (reader != NULL, FALSE);
  g_return_val_if_fail (sub_reader != NULL, FALSE);

  if (_gst_byte_reader_get_remaining_unchecked (reader) < size)
    return FALSE;

  sub_reader->data = reader->data + reader->byte;
  sub_reader->byte = 0;
  sub_reader->size = size;
  return TRUE;


static inline gboolean
_gst_byte_reader_get_sub_reader_inline (GstByteReader * reader,
    GstByteReader * sub_reader, guint size)

  if (!_gst_byte_reader_peek_sub_reader_inline (reader, sub_reader, size))
    return FALSE;
  gst_byte_reader_skip_unchecked (reader, size);
  return TRUE;


static inline gboolean
_gst_byte_reader_dup_data_inline (GstByteReader * reader, guint size, guint8 ** val)

  g_return_val_if_fail (reader != NULL, FALSE);
  g_return_val_if_fail (val != NULL, FALSE);

  if (G_UNLIKELY (size > reader->size || _gst_byte_reader_get_remaining_unchecked (reader) < size))
    return FALSE;

  *val = gst_byte_reader_dup_data_unchecked (reader, size);
  return TRUE;


static inline gboolean
_gst_byte_reader_get_data_inline (GstByteReader * reader, guint size, const guint8 ** val)

  g_return_val_if_fail (reader != NULL, FALSE);
  g_return_val_if_fail (val != NULL, FALSE);

  if (G_UNLIKELY (size > reader->size || _gst_byte_reader_get_remaining_unchecked (reader) < size))
    return FALSE;

  *val = gst_byte_reader_get_data_unchecked (reader, size);
  return TRUE;


static inline gboolean
_gst_byte_reader_peek_data_inline (const GstByteReader * reader, guint size, const guint8 ** val)

  g_return_val_if_fail (reader != NULL, FALSE);
  g_return_val_if_fail (val != NULL, FALSE);

  if (G_UNLIKELY (size > reader->size || _gst_byte_reader_get_remaining_unchecked (reader) < size))
    return FALSE;

  *val = gst_byte_reader_peek_data_unchecked (reader);
  return TRUE;


static inline guint
_gst_byte_reader_get_pos_inline (const GstByteReader * reader)

  g_return_val_if_fail (reader != NULL, 0);

  return _gst_byte_reader_get_pos_unchecked (reader);


static inline gboolean
_gst_byte_reader_skip_inline (GstByteReader * reader, guint nbytes)

  g_return_val_if_fail (reader != NULL, FALSE);

  if (G_UNLIKELY (_gst_byte_reader_get_remaining_unchecked (reader) < nbytes))
    return FALSE;

  reader->byte += nbytes;
  return TRUE;

 }
{$ifndef GST_BYTE_READER_DISABLE_INLINES}
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   

function gst_byte_reader_dup_data(reader,size,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_data(reader,size,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_data(reader,size,val : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_skip(reader,nbytes : longint) : longint;

{$endif}
{ GST_BYTE_READER_DISABLE_INLINES  }
{$endif}
{ __GST_BYTE_READER_H__  }

implementation

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
function GST_BYTE_READER(reader : longint) : PGstByteReader;
begin
  GST_BYTE_READER:=PGstByteReader(reader);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_dup_string(reader,str : longint) : longint;
begin
  gst_byte_reader_dup_string:=gst_byte_reader_dup_string_utf8(reader,str);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_skip_string(reader : longint) : longint;
begin
  gst_byte_reader_skip_string:=gst_byte_reader_skip_string_utf8(reader);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_string(reader,str : longint) : longint;
begin
  gst_byte_reader_get_string:=gst_byte_reader_get_string_utf8(reader,str);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_peek_string(reader,str : longint) : longint;
begin
  gst_byte_reader_peek_string:=gst_byte_reader_peek_string_utf8(reader,str);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_init(reader,data,size : longint) : longint;
begin
  gst_byte_reader_init:=_gst_byte_reader_init_inline(reader,data,size);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_remaining(reader : longint) : longint;
begin
  gst_byte_reader_get_remaining:=_gst_byte_reader_get_remaining_inline(reader);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_size(reader : longint) : longint;
begin
  gst_byte_reader_get_size:=_gst_byte_reader_get_size_inline(reader);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_pos(reader : longint) : longint;
begin
  gst_byte_reader_get_pos:=_gst_byte_reader_get_pos_inline(reader);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint8(reader,val : longint) : longint;
begin
  gst_byte_reader_get_uint8:=G_LIKELY(_gst_byte_reader_get_uint8_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int8(reader,val : longint) : longint;
begin
  gst_byte_reader_get_int8:=G_LIKELY(_gst_byte_reader_get_int8_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint16_le(reader,val : longint) : longint;
begin
  gst_byte_reader_get_uint16_le:=G_LIKELY(_gst_byte_reader_get_uint16_le_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int16_le(reader,val : longint) : longint;
begin
  gst_byte_reader_get_int16_le:=G_LIKELY(_gst_byte_reader_get_int16_le_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint16_be(reader,val : longint) : longint;
begin
  gst_byte_reader_get_uint16_be:=G_LIKELY(_gst_byte_reader_get_uint16_be_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int16_be(reader,val : longint) : longint;
begin
  gst_byte_reader_get_int16_be:=G_LIKELY(_gst_byte_reader_get_int16_be_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint24_le(reader,val : longint) : longint;
begin
  gst_byte_reader_get_uint24_le:=G_LIKELY(_gst_byte_reader_get_uint24_le_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int24_le(reader,val : longint) : longint;
begin
  gst_byte_reader_get_int24_le:=G_LIKELY(_gst_byte_reader_get_int24_le_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint24_be(reader,val : longint) : longint;
begin
  gst_byte_reader_get_uint24_be:=G_LIKELY(_gst_byte_reader_get_uint24_be_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int24_be(reader,val : longint) : longint;
begin
  gst_byte_reader_get_int24_be:=G_LIKELY(_gst_byte_reader_get_int24_be_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint32_le(reader,val : longint) : longint;
begin
  gst_byte_reader_get_uint32_le:=G_LIKELY(_gst_byte_reader_get_uint32_le_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int32_le(reader,val : longint) : longint;
begin
  gst_byte_reader_get_int32_le:=G_LIKELY(_gst_byte_reader_get_int32_le_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint32_be(reader,val : longint) : longint;
begin
  gst_byte_reader_get_uint32_be:=G_LIKELY(_gst_byte_reader_get_uint32_be_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int32_be(reader,val : longint) : longint;
begin
  gst_byte_reader_get_int32_be:=G_LIKELY(_gst_byte_reader_get_int32_be_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint64_le(reader,val : longint) : longint;
begin
  gst_byte_reader_get_uint64_le:=G_LIKELY(_gst_byte_reader_get_uint64_le_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_int64_le(reader,val : longint) : longint;
begin
  gst_byte_reader_get_int64_le:=G_LIKELY(_gst_byte_reader_get_int64_le_inline(reader,val));
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function gst_byte_reader_get_uint64_be(reader,val : longint) : longint;
begin
  gst_byte_reader_get_uint64_be:=G_LIKELY(_gst_byte_reader_get_uint64_be_inline(reader,val));
end;
